feat: next build changes

--- a/eLawsLanding/index.html
+++ b/eLawsLanding/index.html
@@ -2,9 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Logo.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>eLaws</title>
+    <title>eLaws — legal help, on-demand</title>
+    <meta
+      name="description"
+      content="eLaws is an AI legal copilot for instant guidance, document drafting, and case management tailored to your jurisdiction."
+    />
+    <meta name="robots" content="index,follow" />
+    <meta name="theme-color" content="#7b5cd6" />
+    <link rel="canonical" href="https://elaws.net/" />
+    <meta property="og:site_name" content="eLaws" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://elaws.net/" />
+    <meta property="og:title" content="eLaws — legal help, on-demand" />
+    <meta
+      property="og:description"
+      content="AI legal copilot for instant guidance, document drafting, and case management tailored to your jurisdiction."
+    />
+    <meta property="og:image" content="https://elaws.net/Logo.png" />
+    <meta property="og:image:alt" content="eLaws logo" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="eLaws — legal help, on-demand" />
+    <meta
+      name="twitter:description"
+      content="AI legal copilot for instant guidance, document drafting, and case management tailored to your jurisdiction."
+    />
+    <meta name="twitter:image" content="https://elaws.net/Logo.png" />
+    <script type="application/ld+json">
+      {"@context":"https://schema.org","@type":"Organization","name":"eLaws","url":"https://elaws.net/","logo":"https://elaws.net/Logo.png"}
+    </script>
   </head>
   <body>
     <div id="root"></div>
